--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "VBA",
 	"description": "VBA tooling, syntax highlighting and snippets for VS Code.",
 	"icon": "images/icon_256x256.png",
-	"version": "0.9.5",
+	"version": "0.9.6-dev",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -12,7 +12,8 @@
 	"publisher": "serkonda7",
 	"engines": {
 		"node": "16 || >=18",
-		"vscode": "^1.74.0"
+		"vscode": "^1.74.0",
+		"pnpm": ">=8"
 	},
 	"categories": [
 		"Programming Languages",
@@ -108,15 +109,13 @@
 	},
 	"scripts": {
 		"compile": "bait --library -o out/extension.js src",
-		"test": "npm run test-vba && npm run test-wwb",
+		"test": "pnpm run convert-yaml && pnpm run test-vba && pnpm run test-wwb",
 		"test-vba": "vscode-tmgrammar-test -g ./out/vba.tmGrammar.json \"syntaxes/tests/vba/*.bas\"",
 		"test-wwb": "vscode-tmgrammar-test -g ./out/wwb.tmGrammar.json \"syntaxes/tests/other/*.wwd\"",
 		"install-dev-ext": "vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
 		"package": "vsce package",
 		"convert-yaml": "yaml2json language-configuration.yml \"syntaxes/*.yml\"",
-		"pretest": "npm run convert-yaml",
-		"postinstall-dev-ext": "echo 'Please reload the window (run `>reload window` from command palette)'",
-		"vscode:prepublish": "npm run compile && npm run convert-yaml"
+		"vscode:prepublish": "pnpm run compile && pnpm run convert-yaml"
 	},
 	"devDependencies": {
 		"@serkonda7/yaml2json": "^0.8.0",
