--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 18.x
       - uses: pnpm/action-setup@v2
         with:
           version: 8
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 18.x
       - uses: pnpm/action-setup@v2
         with:
           version: 8
@@ -47,11 +47,12 @@ jobs:
       - name: Package
         run: pnpm run package
 
-      - name: Create Release
+      - name: Upload artifact
         if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
+        uses: actions/upload-artifact@v4
         with:
-          files: vscode-vba-0.*.*.vsix
+          name: vba.vsix
+          path: vscode-vba-0.*.*.vsix
 
 
   publish:
@@ -61,26 +62,26 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 16.x
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8
-      - uses: bait-lang/setup-bait@main
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+      - name: Download artifact
+        uses: actions/download-artifact@v4
 
-      - name: Publish to VS Code Marketplace
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: vba.vsix
+
+      - id: publish_to_marketplace
+        name: Publish to VS Code Marketplace
         if: always()
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.VSCE_PAT }}
           registryUrl: https://marketplace.visualstudio.com
+          extensionFile: vba.vsix
 
       - name: Publish to Open VSX Registry
         if: always()
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_PAT }}
+          extensionFile: vba.vsix
