--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "vscode-vba",
 	"displayName": "VBA",
 	"description": "VBA tooling, syntax highlighting and snippets.",
-	"icon": "images/icon_256x256.png",
-	"version": "0.9.6",
+	"icon": "images/icon.png",
+	"version": "0.9.7-dev",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -11,8 +11,8 @@
 	},
 	"publisher": "serkonda7",
 	"engines": {
-		"node": "16 || >=18",
-		"vscode": "^1.74.0",
+		"node": ">=18",
+		"vscode": "^1.82.0",
 		"pnpm": ">=8"
 	},
 	"categories": [
@@ -126,7 +126,7 @@
 	},
 	"devDependencies": {
 		"@serkonda7/yaml2json": "^0.9.0",
-		"@vscode/vsce": "~2.22.0",
-		"vscode-tmgrammar-test": "~0.1.2"
+		"@vscode/vsce": "~2.24.0",
+		"vscode-tmgrammar-test": "~0.1.3"
 	}
 }
