--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,11 +63,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
+        id: dl_art
         uses: actions/download-artifact@v4
         with:
           name: vba.vsix
-          path: vba.vsix
       - run: ls -R
+      - run: echo ${{ steps.dl_art.outputs.download-path }}
 
   publish:
     needs:
