--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     branches: [main]
-    tags: ['0.[0-9]+.[0-9]+']
+    tags: ['*']
 
 jobs:
   test:
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: vba.vsix
-          path: vscode-vba-0.*.*.vsix
+          path: vscode-vba-${{ github.event.release.tag_name }}.vsix
           if-no-files-found: error
 
 
@@ -68,7 +68,6 @@ jobs:
         with:
           name: vba.vsix
       - run: ls -R
-      - run: echo ${{ steps.dl_art.outputs.download-path }}
 
   publish:
     needs:
